classDiagram
    class Owner {
        +String name
        +String contact_info
        +Dict preferences
        +List available_hours
        +update_preferences(preferences)
        +set_availability(availability)
        +get_daily_constraints(target_date)
    }

    class Pet {
        +String id
        +String owner_id
        +String name
        +String species
        +int age
        +String health_notes
        +List default_tasks
        +update_profile(**kwargs)
        +needs_today(target_date)
        +is_high_priority()
    }

    class Task {
        +String id
        +String title
        +String pet_id
        +int duration
        +int priority
        +DateTime due_time
        +String recurrence
        +Date scheduled_date
        +String status
        +String notes
        +mark_completed()
        +reschedule(new_time)
        +update_details(**kwargs)
        +is_overdue(reference)
        +effective_score(now)
        +next_occurrence_time(completed_at)
    }

    class Slot {
        +String id
        +Task task
        +DateTime start_time
        +DateTime end_time
        +duration()
    }

    class TaskManager {
        +List tasks
        +List pets
        +List owners
        +add_owner(owner)
        +add_pet(pet)
        +add_task(task)
        +edit_task(task_id, **updates)
        +delete_task(task_id)
        +get_tasks_by_day(target_date)
        +get_tasks_by_pet(pet_id)
        +get_pending_tasks()
        +load(data)
        +save()
    }

    class Scheduler {
        +DailySchedule agenda
        +Dict constraints
        +Dict settings
        +generate_daily_plan(task_manager, target_date)
        +rank_tasks(tasks)
        +sort_tasks_by_time(tasks)
        +filter_tasks(task_manager, status, pet_name)
        +complete_task(task_manager, task_id, completed_at)
        +detect_time_conflicts(task_manager, tasks)
        +fit_tasks_into_slots(tasks, target_date)
        +explain_plan()
        +adjust_plan(plan, updates)
    }

    class DailySchedule {
        +Date date
        +List slots
        +int total_duration
        +List unscheduled_tasks
        +List warnings
        +String reasoning
        +add_slot(slot)
        +remove_slot(slot_id)
        +get_today_tasks()
        +get_unplanned_tasks()
        +add_warning(warning)
        +describe()
    }

    Owner "1" -- "*" Pet : owns
    Pet "1" -- "*" Task : has
    TaskManager "1" -- "*" Task : manages
    TaskManager "1" -- "*" Pet : manages
    TaskManager "1" -- "*" Owner : manages
    Scheduler "1" -- "1" TaskManager : uses
    Scheduler "1" -- "1" DailySchedule : outputs
    DailySchedule "1" -- "*" Slot : contains
